Fix RebuildTableFromString, document [mugshot:x], reset OWTextManager effect
* Fixed the overworld text manager always keeping the last effect applied through [effect:x]. Now it resets automatically whenever using your menu, and calling `General.SetDialog` or `General.SetChoice`

document some things including [mugshot:x] and rewite some ssmol
make documentation background blurless for mozilla and chrome I think

make "press z or enter" not blurry any more

--- a/Documentation CYF 1.0/css/themesidebar.css
+++ b/Documentation CYF 1.0/css/themesidebar.css
@@ -162,6 +162,8 @@ h4 {
     width    : 100%;
     top      : 0px;
     z-index  : -1;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
 }
 
 .li-header{
